--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dt042g.group8</groupId>
-    <artifactId>sudoku</artifactId>
+    <groupId>com.sim_kar</groupId>
+    <artifactId>sudoku-factory</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -52,7 +52,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.dt042g.group8.Sudoku</mainClass>
+                            <mainClass>com.sim_kar.Sudoku</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
